# kyefa

./: .env  .gitignore  Cargo.toml  README.md
kyefa-desktop/: .env  Cargo.toml
kyefa-desktop/src/: app.rs  error.rs  lib.rs  main.rs  routes.rs
kyefa-desktop/src/ui/: dashboard_view.rs  helper.rs  payment_tracking_view.rs  reports_analytics_view.rs  student_manager_view.rs  teaching_period_view.rs  user_access_view.rs
kyefa-models/: Cargo.toml
kyefa-models/src/: lib.rs
migrations/: 001_init.sql  002_add_payout_entities.sql
src/: app.rs  lib.rs  main.rs  models.rs  routes.rs
src/ui/: dashboard_view.rs  helper.rs  home_view.rs  login_view.rs  mod.rs  payment_tracking_view.rs  student_manager_view.rs
