[package]
name = "kyefa"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
iced = { version = "0.13.1", features = ["advanced", "image", "svg", "tokio"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.117"
sqlx = "0.8.6"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
