[workspace]
members = [
    "kyefa-desktop",
    "kyefa-backend", 
    "kyefa-models"
]
resolver = "2"

[workspace.dependencies]
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6" }
