[package]
name = "kyefa-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
kyefa-models = { path = "../kyefa-models" }

iced = { version = "0.13.1", features = ["advanced", "image", "svg", "tokio"] }

reqwest = { version = "0.12.5", features = ["json"] }

serde = { workspace = true }
serde_json = "1.0.117"

uuid = { workspace = true }
chrono = { workspace = true }
once_cell = "1.21.3"
dotenvy = "0.15.7"

